SOL-2: Adjust css styles for the code element. Prevent wrapping of code on mobile devices.

--- a/assets/less/module/post-article.less
+++ b/assets/less/module/post-article.less
@@ -99,6 +99,7 @@
         pre {
             display: block;
             overflow: auto;
+            overflow-wrap: break-word;
             margin: 3em 0;
             padding: 2em;
             border: 0.063em solid lighten(@gray-light, 8%);
@@ -114,6 +115,7 @@
                 white-space: pre;
                 font-size: inherit;
                 color: @gray-light;
+                word-wrap: normal;
             }
         }
 
